--- a/web/src/Brand/Brand.css
+++ b/web/src/Brand/Brand.css
@@ -3,6 +3,7 @@ div.brand{
   min-width: 25rem;
   border-style: solid;
   border-color: black;
+  border-width: 0.25rem;
   color: white;
   background-color: #112e51;
   flex: 5
