--- a/web/src/App/App.css
+++ b/web/src/App/App.css
@@ -1,9 +1,11 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  font-family: Merriweather Web, Georgia, Cambria, Times New Roman, Times, serif;
+}
+
 .content {
   display: flex;
   flex-wrap: wrap;
-  max-width: 100%;
-}
-
-.site {
-  font-family: Merriweather Web, Georgia, Cambria, Times New Roman, Times, serif;
 }
