--- a/web/src/Header/Header.css
+++ b/web/src/Header/Header.css
@@ -2,27 +2,21 @@
   display: flex;
   flex-direction: row;
   text-align: center;
-  min-width:17rem;
-  /* border-style: solid; */
-  /* border-width: 0.25rem; */
-  /* border-color: black; */
+  min-width: 17rem;
   background-color: black;
-  /* color: black; */
 }
 
-.header button {
-  border-style: none;
-  background-color: black;
+.normal {
+  text-decoration: none;
   color: white;
   padding: 0.75rem;
 }
 
-.header button:hover {
-  background-color: grey;
+.normal:hover {
+  background-color: orange;
 }
 
-.header button:focus {
+.selected {
   outline: none;
-  border-style: none;
-  background-color: orange;
+  background-color: grey;
 }
